@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2006 Vasco Nunes
 
+2006-01-04 Piotr Ozarowski <ozarow@gmail.com>
+	* AnimeDB plugin works again
+
 2006-01-03 Piotr Ozarowski <ozarow@gmail.com>
 	* Fixed bad vol./col. ID in ComboBox after adding new entry
 
